fix: 修复编译错误 - Stream.toList改为collect(Collectors.toList), Java版本统一为11